--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express-session": "^1.18.0",
+    "google-auth-library": "^9.10.0",
     "mongoose": "^8.4.1",
     "openai": "^4.49.1",
     "passport": "^0.7.0",
